<resources>
    <string name="app_name">cal_nueva</string>

    <string name="cer">0</string>
    <string name="nue">9</string>
    <string name="och">8</string>
    <string name="sie">7</string>
    <string name="sei">6</string>
    <string name="cin">5</string>
    <string name="cua">4</string>
    <string name="tre">3</string>
    <string name="dos">2</string>
    <string name="un">1</string>
    <string name="mas">+</string>
    <string name="men">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="del">DEL</string>
    <string name="igu">=</string>
    <string name="pun">.</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>